# provas

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix  result
src/: lib.rs  runner.rs  target.rs  tests_bundle.rs  tests_helm.rs  tests_helm_content.rs  tests_helm_rendered.rs  tests_oci.rs
tests/: all_real_openclaw_charts.rs  properties.rs  real_chart_rendered.rs  real_openclaw_agent_chart.rs  real_openclaw_chart.rs  real_openclaw_image_bytes.rs  verify_cli_e2e.rs
tests/fixtures/: openclaw-publisher-pki-f6505fd.json
