[package]
name = "provas"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "Typed compliance-test framework — packs of pinned tests producing deterministic pack_hashes that become part of the cartorio merkle ledger"
license = "MIT"
repository = "https://github.com/pleme-io/provas"

[lib]
name = "provas"
path = "src/lib.rs"

[dependencies]
blake3 = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
hex = "0.4"
thiserror = "2.0"
tameshi = "0.1"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
