[package]
name = "provas"
version = "0.4.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "Typed compliance-test framework — packs of pinned tests producing deterministic pack_hashes that become part of the cartorio merkle ledger"
license = "MIT"
repository = "https://github.com/pleme-io/provas"

[lib]
name = "provas"
path = "src/lib.rs"

[[bin]]
name = "provas-verify"
path = "src/bin/verify.rs"

[dependencies]
blake3 = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
hex = "0.4"
thiserror = "2.0"
tameshi = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
proptest = "1.5"
# E2E for provas-verify CLI: spin up a real cartorio in-process and
# point the binary at it.
cartorio = { git = "https://github.com/pleme-io/cartorio", tag = "v0.4.1" }
tabeliao = { git = "https://github.com/pleme-io/tabeliao", tag = "v0.6.0" }
tokio = { version = "1.50", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
